<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true"
              android:id="@+id/ll_jzsw"
              android:background="@color/grey_bg">

    <RelativeLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        >
        <TextView
            android:id="@+id/tv_host"
            android:text="@string/host"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <HorizontalScrollView
            android:layout_toRightOf="@+id/tv_host"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <!--松树-->
                <CheckedTextView
                    android:id="@+id/ctv_ss"
                    android:text="@string/host_ss"
                    style="@style/ctv_whbw" />
                <!--柏树-->
                <CheckedTextView
                    android:id="@+id/ctv_bs"
                    android:text="@string/host_bs"
                    style="@style/ctv_whbw"
                    />
                <!--杉树-->
                <CheckedTextView
                    android:id="@+id/ctv_shanshu"
                    android:text="@string/host_shanshu"
                    style="@style/ctv_whbw"
                    />
                <!--油茶-->
                <CheckedTextView
                    android:id="@+id/ctv_yc"
                    android:text="@string/host_yc"
                    style="@style/ctv_whbw"
                    />

            </LinearLayout>

        </HorizontalScrollView>

    </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_identify"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:text="@string/jzsw_tj"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    android:text="@string/jzsw_ts"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3px"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/colorPrimary"/>

                <AutoCompleteTextView
                    android:id="@+id/et_keyword"
                    style="@style/et_search"
                    android:hint="@string/keyword"/>


                <TextView
                    android:id="@+id/tv_select"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:background="@drawable/button_select"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/select"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:textColor="@color/grey"
                    android:text="@string/fuhe"/>

                <TextView
                    android:id="@+id/tv_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#EEBB17"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/grey"
                    android:text="@string/jilu"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_jzsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
        </LinearLayout>
</LinearLayout>