<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true"
              android:id="@+id/ll_whzz"
              android:background="@color/grey_bg">
    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        >
        <TextView
            android:id="@+id/tv_whbw"
            android:text="@string/whbw"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <CheckedTextView
            android:layout_toRightOf="@+id/tv_whbw"
            android:id="@+id/ctv_gs"
            android:text="@string/whbw_gs"
            style="@style/ctv_whbw" />
        <CheckedTextView
            android:id="@+id/ctv_yb"
            android:layout_toRightOf="@+id/ctv_gs"
            android:text="@string/whbw_yb"
            style="@style/ctv_whbw"
            android:layout_toEndOf="@+id/ctv_gs" />
        <CheckedTextView
            android:id="@+id/ctv_jb"
            android:layout_toRightOf="@+id/ctv_yb"
            android:text="@string/whbw_jb"
            style="@style/ctv_whbw"
           />
        <CheckedTextView
            android:id="@+id/ctv_gb"
            android:layout_toRightOf="@+id/ctv_jb"
            android:text="@string/whbw_gb"
            style="@style/ctv_whbw"
            />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_identify"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/whzz"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/grey"
                    android:textSize="10sp"
                    android:text="@string/yhsw_ts"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3px"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/et_keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:padding="5dp"
                    android:background="@drawable/selector_bg"
                    android:gravity="center"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey_et"
                    android:textSize="18sp"
                    android:hint="@string/keyword"/>

                <TextView
                    android:id="@+id/tv_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:background="@drawable/button_select"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/select"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:textColor="@color/grey"
                    android:text="@string/fuhe"/>

                <TextView
                    android:id="@+id/tv_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#EEBB17"
                    android:text=""/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/grey"
                    android:text="@string/jilu"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_whzz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>